--- a/homeworks/HW2.ipynb
+++ b/homeworks/HW2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,19 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "package 'RUnit' successfully unpacked and MD5 sums checked\n",
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\tC:\\Users\\Halil\\AppData\\Local\\Temp\\RtmpKuh6Un\\downloaded_packages\n"
+      "Warning message:\n",
+      "\"package 'RUnit' is in use and will not be installed\""
      ]
     }
    ],
@@ -61,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -121,22 +119,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "1.00723908154323"
+       "0.992081622304374"
       ],
       "text/latex": [
-       "1.00723908154323"
+       "0.992081622304374"
       ],
       "text/markdown": [
-       "1.00723908154323"
+       "0.992081622304374"
       ],
       "text/plain": [
-       "[1] 1.007239"
+       "[1] 0.9920816"
       ]
      },
      "metadata": {},
@@ -145,16 +143,16 @@
     {
      "data": {
       "text/html": [
-       "0.495746030661053"
+       "0.492976417973359"
       ],
       "text/latex": [
-       "0.495746030661053"
+       "0.492976417973359"
       ],
       "text/markdown": [
-       "0.495746030661053"
+       "0.492976417973359"
       ],
       "text/plain": [
-       "[1] 0.495746"
+       "[1] 0.4929764"
       ]
      },
      "metadata": {},
@@ -191,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +337,7 @@
       "text/plain": [
        "result\n",
        "  H   T \n",
-       "788 212 "
+       "827 173 "
       ]
      },
      "metadata": {},
@@ -365,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -678,38 +676,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning message in min(x):\n",
-      "\"no non-missing arguments to min; returning Inf\"Warning message in max(x):\n",
-      "\"no non-missing arguments to max; returning -Inf\"Warning message in min(x):\n",
-      "\"no non-missing arguments to min; returning Inf\"Warning message in max(x):\n",
-      "\"no non-missing arguments to max; returning -Inf\""
-     ]
+     "data": {
+      "text/html": [
+       "<strong>png:</strong> 2"
+      ],
+      "text/latex": [
+       "\\textbf{png:} 2"
+      ],
+      "text/markdown": [
+       "**png:** 2"
+      ],
+      "text/plain": [
+       "png \n",
+       "  2 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "ename": "ERROR",
-     "evalue": "Error in plot.window(...): need finite 'xlim' values\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in plot.window(...): need finite 'xlim' values\nTraceback:\n",
-      "1. plot(pairs(iris[1:4]))",
-      "2. plot.default(pairs(iris[1:4]))",
-      "3. localWindow(xlim, ylim, log, asp, ...)",
-      "4. plot.window(...)"
-     ]
+     "data": {
+      "text/html": [
+       "TRUE"
+      ],
+      "text/latex": [
+       "TRUE"
+      ],
+      "text/markdown": [
+       "TRUE"
+      ],
+      "text/plain": [
+       "[1] TRUE"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "png(file=\"../images/hw2-task7b.png\")\n",
     "# Do not alter the code above this line\n",
     "\n",
-    "plot(pairs(iris[1:4]))\n",
+    "pairs(iris, main = \"Anderson's Iris Data\")\n",
     "\n",
     "# Do not alter the code below this line\n",
     "dev.off()\n",
