--- a/homeworks/HW2.ipynb
+++ b/homeworks/HW2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,17 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning message:\n",
-      "\"package 'RUnit' is in use and will not be installed\""
+      "package 'RUnit' successfully unpacked and MD5 sums checked\n",
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\tC:\\Users\\Halil\\AppData\\Local\\Temp\\RtmpkpDuKI\\downloaded_packages\n"
      ]
     }
    ],
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -119,22 +121,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0.992081622304374"
+       "1.01099971686164"
       ],
       "text/latex": [
-       "0.992081622304374"
+       "1.01099971686164"
       ],
       "text/markdown": [
-       "0.992081622304374"
+       "1.01099971686164"
       ],
       "text/plain": [
-       "[1] 0.9920816"
+       "[1] 1.011"
       ]
      },
      "metadata": {},
@@ -143,16 +145,16 @@
     {
      "data": {
       "text/html": [
-       "0.492976417973359"
+       "0.509050712133873"
       ],
       "text/latex": [
-       "0.492976417973359"
+       "0.509050712133873"
       ],
       "text/markdown": [
-       "0.492976417973359"
+       "0.509050712133873"
       ],
       "text/plain": [
-       "[1] 0.4929764"
+       "[1] 0.5090507"
       ]
      },
      "metadata": {},
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +339,7 @@
       "text/plain": [
        "result\n",
        "  H   T \n",
-       "827 173 "
+       "780 220 "
       ]
      },
      "metadata": {},
@@ -363,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
